// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backdrop styles should render with default styles when not visible 1`] = `
.circuit-0 {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: black;
  -webkit-transition: opacity 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,visibility 200ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 0;
}

@media (min-width:768px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<div
  className="circuit-0 circuit-1"
/>
`;

exports[`Backdrop styles should render with default styles when visible 1`] = `
.circuit-0 {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: black;
  -webkit-transition: opacity 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,visibility 200ms ease-in-out;
  visibility: visible;
  opacity: 0.56;
  z-index: 0;
}

@media (min-width:768px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<div
  className="circuit-0 circuit-1"
/>
`;
